<resources>
    <string name="app_name">INSIDER</string>
    <string name="app_name_1">Insider</string>
    <string name="app_purpose">나누는 식재료, 줄어드는 부담</string>


    <!-- Login-->
    <string name="userId">사용자 ID</string>
    <string name="userPassword">비밀번호</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="logInWith">Log in With</string>
    <string name="logIn">로그인</string>
    <string name="singUp">회원가입</string>

    <!--SingUp-->
    <string name="userIdSignUp">사용자 ID(6자 이상, 특수 문자x, 숫자만 x)</string>
    <string name="userNicknameSignUp">닉네임(2자 이상, 특수 문자 _,- 가능)</string>
    <string name="userPasswordSignUp">비밀번호(대문자, 특수 문자 1개 이상. 연속된 숫자 3자리 x)</string>
    <string name="passwordCheckSignUp">비밀번호 확인(위의 비밀번호와 일치)</string>
    <string name="userEmailSignUp">이메일 주소</string>
    <string name="registerNum">사업자 번호(10자리)</string>
    <string name="address">주소</string>
    <string name="addressFind">우편번호 찾기</string>


    <string name="registerNumHint">1111111111</string>
    <string name="emailHint">example@insider.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home, search -->
    <string name="categoryText">어떤거 찾아?</string>
    <string name="hotGoods">🔥 지금 가장 핫한 상품!</string>
    <string name="searchHint">원하는 상품을 검색하세요!</string>
    <string name="favoriteList">찜목록</string>
    <string name="ProductDetail">상품 상세 정보</string>
    <string name="realTimeSearchTermsRanking">실시간 검색어 순위</string>
    <string name="recentSearches">최근 검색어</string>
    <string name="removeAllText"><u>모두 지우기</u></string>
    <string name="myScore">내 평점</string>
    <string name="sellMove">판매 등록 바로가기</string>
    <string name="myPageText">마이 페이지</string>

    <!-- myPage -->
    <string name="modify"><u>수정하기</u></string>
    <string name="detailReview"><u>후기 자세히 보기</u></string>
    <string name="liveAddress">거주지</string>
    <string name="singUpComplete">회원가입 완료</string>
    <string name="shoppingList">구매 목록</string>
    <string name="saleList">판매 목록</string>
    <string name="detailShow"><u>자세히 보기</u></string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="withdrawal"><u>계정탈퇴</u></string>
    <string name="exchangeList">교환 목록</string>

    <!-- 내 정보 수정 -->
    <string name="editprofile">내 정보 수정</string>
    <string name="bringImage"><u>이미지 불러오기</u></string>
    <string name="userEmailProfile">이메일 주소</string>
    <string name="registerNumEdit">사업자 번호</string>


    <!-- 판매 등록 화면 -->
    <string name="addressCerify">우편번호 인증</string>
    <string name="sellRegistor">판매 등록하기</string>

    <!-- 채팅 리스트 화면 -->
    <string name="chatListTextView">교환하실래요?</string>
    <string name="delete"><u>삭제하기</u></string>
    <string name="cancel"><u>모두 취소</u></string>
    <string name="goodsOnSale">판매중인 상품</string>

    <!-- 수정 화면 -->
    <string name="shawdowView">가격을 낮추면 <b>할인상품에 등록</b>돼요!</string>
    <string name="title_activity_ka_kao_web_view">KaKaoWebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>