<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        tools:context=".login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/login_singup_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/autoLoginLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoLayout"
            app:layout_constraintVertical_bias="0.7">

            <LinearLayout
                android:id="@+id/userIdLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/userId"
                    android:textColor="@color/loginSingUpTextColor" />

                <EditText
                    android:id="@+id/idEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/editTextTint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/pwdEdit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userIdLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userPassword"
                    android:textColor="@color/loginSingUpTextColor" />

                <EditText
                    android:id="@+id/pwdEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/editTextTint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/autoLoginLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintBottom_toTopOf="@id/btnLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="자동 로그인"
                android:textColor="#979898"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/autoLoginSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="end"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/white"
                app:track="@drawable/track_selector"
                app:trackTint="@color/switch_track" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@id/logInWithLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/singUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/main"
                android:text="@string/singUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/logIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/logIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/main"
                android:text="@string/logIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/singUp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logInWithLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/snsLoginLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/editTextTint"
                app:layout_constraintBottom_toBottomOf="@id/logInWith"
                app:layout_constraintEnd_toStartOf="@id/logInWith"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/logInWith" />

            <TextView
                android:id="@+id/logInWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/logInWith"
                android:textColor="@color/gray30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/editTextTint"
                app:layout_constraintBottom_toBottomOf="@id/logInWith"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/logInWith"
                app:layout_constraintTop_toTopOf="@id/logInWith" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/snsLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/kakaoBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/point"
                android:text="Kakao"
                android:textSize="18sp" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/googleLoginColor"
                android:text="@string/google"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>